css applied using AI

--- a/index.html
+++ b/index.html
@@ -4,90 +4,96 @@
     <meta charset="UTF-8">
     <title>Basic Accounting Overview</title>
 </head>
-<body>
+<body style="font-family: 'Georgia', serif; line-height: 1.6; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f8f8f8; color: #333;">
 
-    <h1>General Ledger & Key Accounts</h1>
+    <h1 style="text-align: center; color: #004d40; border-bottom: 3px solid #004d40; padding-bottom: 10px; margin-bottom: 20px;">General Ledger & Key Accounts</h1>
 
-    <p>
-        Welcome to a simplified overview of basic accounting principles. This page illustrates the fundamental elements of the accounting equation and common account types.
+    <p style="text-align: center; font-size: 1.1em; color: #555;">
+        Welcome to a simplified overview of basic accounting principles. This page illustrates the <strong style="color: #004d40; font-weight: bold;">fundamental elements</strong> of the accounting equation and common account types.
     </p>
 
-    <h2>The Accounting Equation</h2>
-    <p>
-        The foundation of double-entry bookkeeping is the **Accounting Equation**, which must always remain in balance:
+    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
+    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">The Accounting Equation</h2>
+    <p style="margin-bottom: 10px;">
+        The foundation of double-entry bookkeeping is the <em style="font-style: italic; color: #00796b;">Accounting Equation</em>, which must always remain in balance:
     </p>
-    <p>
-        **Assets = Liabilities + Equity**
+    <p style="font-size: 1.5em; font-weight: bold; text-align: center; background-color: #e0f2f1; padding: 15px; border: 2px dashed #004d40; border-radius: 8px; color: #004d40;">
+        <span style="color: #004d40;">**Assets**</span> = <span style="color: #d32f2f;">**Liabilities**</span> + <span style="color: #388e3c;">**Equity**</span>
     </p>
 
-    <h2>Main Account Categories</h2>
+    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
+    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">Main Account Categories</h2>
     <p>
         All accounts fall into one of these five main categories:
     </p>
-    <ul>
-        <li>**Assets:** Resources owned by the company (e.g., Cash, Accounts Receivable).</li>
-        <li>**Liabilities:** Obligations owed to outside parties (e.g., Accounts Payable, Notes Payable).</li>
-        <li>**Equity:** The owners' claim on the assets (e.g., Common Stock, Retained Earnings).</li>
-        <li>**Revenue:** Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., Sales Revenue, Service Revenue).</li>
-        <li>**Expenses:** Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., Rent Expense, Salaries Expense).</li>
+    <ul style="list-style-type: none; padding-left: 0;">
+        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #f1f8e9; border-left: 4px solid #388e3c;"><strong>Assets:</strong> Resources owned by the company (e.g., Cash, Accounts Receivable).</li>
+        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #ffebee; border-left: 4px solid #d32f2f;"><strong>Liabilities:</strong> Obligations owed to outside parties (e.g., Accounts Payable, Notes Payable).</li>
+        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #e0f2f1; border-left: 4px solid #004d40;"><strong>Equity:</strong> The owners' claim on the assets (e.g., Common Stock, Retained Earnings).</li>
+        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #fffde7; border-left: 4px solid #fbc02d;"><strong>Revenue:</strong> Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., Sales Revenue, Service Revenue).</li>
+        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #f3e5f5; border-left: 4px solid #7b1fa2;"><strong>Expenses:</strong> Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., Rent Expense, Salaries Expense).</li>
     </ul>
 
-    <h2>Impact on Accounts (Debits & Credits)</h2>
+    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
+    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">Impact on Accounts (Debits & Credits)</h2>
     <p>
-        Every transaction affects at least two accounts. **Debits** (Dr) and **Credits** (Cr) are used to record these changes.
+        Every transaction affects at least two accounts. <strong>Debits</strong> (Dr) and <strong>Credits</strong> (Cr) are used to record these changes.
     </p>
-    <table border="1">
-        <caption>Normal Balances and Increase/Decrease Rules</caption>
-        <thead>
+    <table border="1" style="width: 100%; border-collapse: collapse; margin-top: 15px; border: 1px solid #ccc;">
+        <caption style="font-weight: bold; margin-bottom: 5px; color: #004d40;">Normal Balances and Increase/Decrease Rules</caption>
+        <thead style="background-color: #004d40; color: white;">
             <tr>
-                <th>Account Category</th>
-                <th>To Increase (Normal Balance)</th>
-                <th>To Decrease</th>
+                <th style="padding: 12px; border: 1px solid #004d40;">Account Category</th>
+                <th style="padding: 12px; border: 1px solid #004d40;">To Increase (Normal Balance)</th>
+                <th style="padding: 12px; border: 1px solid #004d40;">To Decrease</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Assets</td>
-                <td>Debit (Dr)</td>
-                <td>Credit (Cr)</td>
+            <tr style="background-color: #e0f2f1;">
+                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Assets</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
             </tr>
             <tr>
-                <td>Liabilities</td>
-                <td>Credit (Cr)</td>
-                <td>Debit (Dr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Liabilities</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+            </tr>
+            <tr style="background-color: #e0f2f1;">
+                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Equity</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
             </tr>
             <tr>
-                <td>Equity</td>
-                <td>Credit (Cr)</td>
-                <td>Debit (Dr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Revenue</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
             </tr>
-            <tr>
-                <td>Revenue</td>
-                <td>Credit (Cr)</td>
-                <td>Debit (Dr)</td>
-            </tr>
-            <tr>
-                <td>Expenses</td>
-                <td>Debit (Dr)</td>
-                <td>Credit (Cr)</td>
+            <tr style="background-color: #e0f2f1;">
+                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Expenses</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
             </tr>
         </tbody>
     </table>
 
-    <p>
-        Understanding these rules is essential for preparing the **Trial Balance** and ultimately, the **Financial Statements**.
+    <p style="margin-top: 20px;">
+        Understanding these rules is essential for preparing the <strong style="color: #00796b;">Trial Balance</strong> and ultimately, the <strong style="color: #00796b;">Financial Statements</strong>.
     </p>
 
-    <h3>Basic Financial Statements</h3>
-    <ol>
-        <li>Income Statement (shows Revenue and Expenses)</li>
-        <li>Statement of Retained Earnings (shows changes in Equity)</li>
-        <li>Balance Sheet (shows Assets, Liabilities, and Equity)</li>
+    <h3 style="color: #333;">Basic Financial Statements</h3>
+    <ol style="padding-left: 20px;">
+        <li style="margin-bottom: 5px;">Income Statement (shows Revenue and Expenses)</li>
+        <li style="margin-bottom: 5px;">Statement of Retained Earnings (shows changes in Equity)</li>
+        <li style="margin-bottom: 5px;">Balance Sheet (shows Assets, Liabilities, and Equity)</li>
         <li>Statement of Cash Flows (shows cash movements)</li>
     </ol>
 
-    <p>
-        *This is a simplified representation for instructional purposes only.*
+    <p style="text-align: center; margin-top: 40px; font-size: 0.9em; color: #777; border-top: 1px dashed #ccc; padding-top: 10px;">
+        <em style="font-style: italic;">*This is a simplified representation for instructional purposes only.*</em>
     </p>
 
 </body>
