dark theme with orange and gold

--- a/index.html
+++ b/index.html
@@ -4,96 +4,96 @@
     <meta charset="UTF-8">
     <title>Basic Accounting Overview</title>
 </head>
-<body style="font-family: 'Georgia', serif; line-height: 1.6; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f8f8f8; color: #333;">
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; max-width: 900px; margin: 0 auto; padding: 25px; background-color: #121212; color: #e0e0e0;">
 
-    <h1 style="text-align: center; color: #004d40; border-bottom: 3px solid #004d40; padding-bottom: 10px; margin-bottom: 20px;">General Ledger & Key Accounts</h1>
+    <h1 style="text-align: center; color: #ff9800; border-bottom: 2px solid #ff9800; padding-bottom: 15px; margin-bottom: 30px; font-size: 2.5em; letter-spacing: 2px; text-transform: uppercase;">General Ledger & Key Accounts</h1>
 
-    <p style="text-align: center; font-size: 1.1em; color: #555;">
-        Welcome to a simplified overview of basic accounting principles. This page illustrates the <strong style="color: #004d40; font-weight: bold;">fundamental elements</strong> of the accounting equation and common account types.
+    <p style="text-align: center; font-size: 1.1em; color: #bdbdbd;">
+        Welcome to a simplified overview of basic accounting principles. This page illustrates the <strong style="color: #ffc107; font-weight: bold;">fundamental elements</strong> of the accounting equation and common account types.
     </p>
 
-    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
 
-    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">The Accounting Equation</h2>
-    <p style="margin-bottom: 10px;">
-        The foundation of double-entry bookkeeping is the <em style="font-style: italic; color: #00796b;">Accounting Equation</em>, which must always remain in balance:
+    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">The Accounting Equation</h2>
+    <p style="margin-bottom: 15px;">
+        The foundation of double-entry bookkeeping is the <em style="font-style: italic; color: #ffc107;">Accounting Equation</em>, which must always remain in balance:
     </p>
-    <p style="font-size: 1.5em; font-weight: bold; text-align: center; background-color: #e0f2f1; padding: 15px; border: 2px dashed #004d40; border-radius: 8px; color: #004d40;">
-        <span style="color: #004d40;">**Assets**</span> = <span style="color: #d32f2f;">**Liabilities**</span> + <span style="color: #388e3c;">**Equity**</span>
+    <p style="font-size: 1.8em; font-weight: bold; text-align: center; background-color: #212121; padding: 20px; border: 2px solid #ff9800; border-radius: 10px; color: #ffc107; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
+        <span style="color: #ff9800;">**Assets**</span> = <span style="color: #ef5350;">**Liabilities**</span> + <span style="color: #66bb6a;">**Equity**</span>
     </p>
 
-    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
 
-    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">Main Account Categories</h2>
+    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">Main Account Categories</h2>
     <p>
         All accounts fall into one of these five main categories:
     </p>
-    <ul style="list-style-type: none; padding-left: 0;">
-        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #f1f8e9; border-left: 4px solid #388e3c;"><strong>Assets:</strong> Resources owned by the company (e.g., Cash, Accounts Receivable).</li>
-        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #ffebee; border-left: 4px solid #d32f2f;"><strong>Liabilities:</strong> Obligations owed to outside parties (e.g., Accounts Payable, Notes Payable).</li>
-        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #e0f2f1; border-left: 4px solid #004d40;"><strong>Equity:</strong> The owners' claim on the assets (e.g., Common Stock, Retained Earnings).</li>
-        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #fffde7; border-left: 4px solid #fbc02d;"><strong>Revenue:</strong> Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., Sales Revenue, Service Revenue).</li>
-        <li style="margin-bottom: 8px; padding: 5px 10px; background-color: #f3e5f5; border-left: 4px solid #7b1fa2;"><strong>Expenses:</strong> Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., Rent Expense, Salaries Expense).</li>
+    <ul style="list-style-type: disc; padding-left: 40px; color: #bdbdbd;">
+        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Assets:</strong> Resources owned by the company (e.g., <span style="color: #a5d6a7;">Cash</span>, <span style="color: #a5d6a7;">Accounts Receivable</span>).</li>
+        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Liabilities:</strong> Obligations owed to outside parties (e.g., <span style="color: #ef9a9a;">Accounts Payable</span>, <span style="color: #ef9a9a;">Notes Payable</span>).</li>
+        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Equity:</strong> The owners' claim on the assets (e.g., <span style="color: #ffeb3b;">Common Stock</span>, <span style="color: #ffeb3b;">Retained Earnings</span>).</li>
+        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Revenue:</strong> Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., <span style="color: #ffb74d;">Sales Revenue</span>, <span style="color: #ffb74d;">Service Revenue</span>).</li>
+        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Expenses:</strong> Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., <span style="color: #ce93d8;">Rent Expense</span>, <span style="color: #ce93d8;">Salaries Expense</span>).</li>
     </ul>
 
-    <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
 
-    <h2 style="color: #00796b; border-left: 5px solid #00796b; padding-left: 10px;">Impact on Accounts (Debits & Credits)</h2>
+    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">Impact on Accounts (Debits & Credits)</h2>
     <p>
-        Every transaction affects at least two accounts. <strong>Debits</strong> (Dr) and <strong>Credits</strong> (Cr) are used to record these changes.
+        Every transaction affects at least two accounts. <strong style="color: #00bcd4;">Debits</strong> (Dr) and <strong style="color: #ff9800;">Credits</strong> (Cr) are used to record these changes.
     </p>
-    <table border="1" style="width: 100%; border-collapse: collapse; margin-top: 15px; border: 1px solid #ccc;">
-        <caption style="font-weight: bold; margin-bottom: 5px; color: #004d40;">Normal Balances and Increase/Decrease Rules</caption>
-        <thead style="background-color: #004d40; color: white;">
+    <table border="1" style="width: 100%; border-collapse: collapse; margin-top: 20px; border: 1px solid #ff9800;">
+        <caption style="font-weight: bold; margin-bottom: 10px; color: #ffc107; font-size: 1.1em;">Normal Balances and Increase/Decrease Rules</caption>
+        <thead style="background-color: #ff9800; color: #121212; text-transform: uppercase;">
             <tr>
-                <th style="padding: 12px; border: 1px solid #004d40;">Account Category</th>
-                <th style="padding: 12px; border: 1px solid #004d40;">To Increase (Normal Balance)</th>
-                <th style="padding: 12px; border: 1px solid #004d40;">To Decrease</th>
+                <th style="padding: 15px; border: 1px solid #ff9800;">Account Category</th>
+                <th style="padding: 15px; border: 1px solid #ff9800;">To Increase (<span style="color: #121212;">Normal Balance</span>)</th>
+                <th style="padding: 15px; border: 1px solid #ff9800;">To Decrease</th>
             </tr>
         </thead>
         <tbody>
-            <tr style="background-color: #e0f2f1;">
-                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Assets</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
+            <tr style="background-color: #212121;">
+                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Assets</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
             </tr>
-            <tr>
-                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Liabilities</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+            <tr style="background-color: #1e1e1e;">
+                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Liabilities</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
             </tr>
-            <tr style="background-color: #e0f2f1;">
-                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Equity</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+            <tr style="background-color: #212121;">
+                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Equity</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
             </tr>
-            <tr>
-                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Revenue</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
+            <tr style="background-color: #1e1e1e;">
+                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Revenue</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
             </tr>
-            <tr style="background-color: #e0f2f1;">
-                <td style="padding: 10px; border: 1px solid #ccc; font-weight: bold;">Expenses</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #ccf; color: #000080;">Debit (Dr)</td>
-                <td style="padding: 10px; border: 1px solid #ccc; background-color: #fcc; color: #800000;">Credit (Cr)</td>
+            <tr style="background-color: #212121;">
+                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Expenses</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
+                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
             </tr>
         </tbody>
     </table>
 
-    <p style="margin-top: 20px;">
-        Understanding these rules is essential for preparing the <strong style="color: #00796b;">Trial Balance</strong> and ultimately, the <strong style="color: #00796b;">Financial Statements</strong>.
+    <p style="margin-top: 30px;">
+        Understanding these rules is essential for preparing the <strong style="color: #ff9800;">Trial Balance</strong> and ultimately, the <strong style="color: #ff9800;">Financial Statements</strong>.
     </p>
 
-    <h3 style="color: #333;">Basic Financial Statements</h3>
-    <ol style="padding-left: 20px;">
-        <li style="margin-bottom: 5px;">Income Statement (shows Revenue and Expenses)</li>
-        <li style="margin-bottom: 5px;">Statement of Retained Earnings (shows changes in Equity)</li>
-        <li style="margin-bottom: 5px;">Balance Sheet (shows Assets, Liabilities, and Equity)</li>
-        <li>Statement of Cash Flows (shows cash movements)</li>
+    <h3 style="color: #ffc107; border-bottom: 1px dashed #444; padding-bottom: 5px; margin-top: 30px;">Basic Financial Statements</h3>
+    <ol style="padding-left: 40px; color: #bdbdbd;">
+        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Income Statement</strong> (shows Revenue and Expenses)</li>
+        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Statement of Retained Earnings</strong> (shows changes in Equity)</li>
+        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Balance Sheet</strong> (shows Assets, Liabilities, and Equity)</li>
+        <li><strong style="color: #ff9800;">Statement of Cash Flows</strong> (shows cash movements)</li>
     </ol>
 
-    <p style="text-align: center; margin-top: 40px; font-size: 0.9em; color: #777; border-top: 1px dashed #ccc; padding-top: 10px;">
-        <em style="font-style: italic;">*This is a simplified representation for instructional purposes only.*</em>
+    <p style="text-align: center; margin-top: 50px; font-size: 0.9em; color: #555; border-top: 1px solid #444; padding-top: 15px;">
+        <em style="font-style: italic;">*This is a simplified representation for instructional purposes only. Design by Gemini.*</em>
     </p>
 
 </body>
