--- a/index.html
+++ b/index.html
@@ -4,96 +4,90 @@
     <meta charset="UTF-8">
     <title>Basic Accounting Overview</title>
 </head>
-<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; max-width: 900px; margin: 0 auto; padding: 25px; background-color: #121212; color: #e0e0e0;">
+<body>
 
-    <h1 style="text-align: center; color: #ff9800; border-bottom: 2px solid #ff9800; padding-bottom: 15px; margin-bottom: 30px; font-size: 2.5em; letter-spacing: 2px; text-transform: uppercase;">General Ledger & Key Accounts</h1>
+    <h1>General Ledger & Key Accounts</h1>
 
-    <p style="text-align: center; font-size: 1.1em; color: #bdbdbd;">
-        Welcome to a simplified overview of basic accounting principles. This page illustrates the <strong style="color: #ffc107; font-weight: bold;">fundamental elements</strong> of the accounting equation and common account types.
+    <p>
+        Welcome to a simplified overview of basic accounting principles. This page illustrates the fundamental elements of the accounting equation and common account types.
     </p>
 
-    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
-
-    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">The Accounting Equation</h2>
-    <p style="margin-bottom: 15px;">
-        The foundation of double-entry bookkeeping is the <em style="font-style: italic; color: #ffc107;">Accounting Equation</em>, which must always remain in balance:
+    <h2>The Accounting Equation</h2>
+    <p>
+        The foundation of double-entry bookkeeping is the **Accounting Equation**, which must always remain in balance:
     </p>
-    <p style="font-size: 1.8em; font-weight: bold; text-align: center; background-color: #212121; padding: 20px; border: 2px solid #ff9800; border-radius: 10px; color: #ffc107; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
-        <span style="color: #ff9800;">**Assets**</span> = <span style="color: #ef5350;">**Liabilities**</span> + <span style="color: #66bb6a;">**Equity**</span>
+    <p>
+        **Assets = Liabilities + Equity**
     </p>
 
-    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
-
-    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">Main Account Categories</h2>
+    <h2>Main Account Categories</h2>
     <p>
         All accounts fall into one of these five main categories:
     </p>
-    <ul style="list-style-type: disc; padding-left: 40px; color: #bdbdbd;">
-        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Assets:</strong> Resources owned by the company (e.g., <span style="color: #a5d6a7;">Cash</span>, <span style="color: #a5d6a7;">Accounts Receivable</span>).</li>
-        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Liabilities:</strong> Obligations owed to outside parties (e.g., <span style="color: #ef9a9a;">Accounts Payable</span>, <span style="color: #ef9a9a;">Notes Payable</span>).</li>
-        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Equity:</strong> The owners' claim on the assets (e.g., <span style="color: #ffeb3b;">Common Stock</span>, <span style="color: #ffeb3b;">Retained Earnings</span>).</li>
-        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Revenue:</strong> Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., <span style="color: #ffb74d;">Sales Revenue</span>, <span style="color: #ffb74d;">Service Revenue</span>).</li>
-        <li style="margin-bottom: 10px;"><strong style="color: #ffc107;">Expenses:</strong> Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., <span style="color: #ce93d8;">Rent Expense</span>, <span style="color: #ce93d8;">Salaries Expense</span>).</li>
+    <ul>
+        <li>**Assets:** Resources owned by the company (e.g., Cash, Accounts Receivable).</li>
+        <li>**Liabilities:** Obligations owed to outside parties (e.g., Accounts Payable, Notes Payable).</li>
+        <li>**Equity:** The owners' claim on the assets (e.g., Common Stock, Retained Earnings).</li>
+        <li>**Revenue:** Increases in assets or decreases in liabilities resulting from the delivery of goods or services (e.g., Sales Revenue, Service Revenue).</li>
+        <li>**Expenses:** Decreases in assets or increases in liabilities from the costs of generating revenue (e.g., Rent Expense, Salaries Expense).</li>
     </ul>
 
-    <hr style="border: 0; height: 1px; background-color: #333; margin: 30px 0;">
-
-    <h2 style="color: #ff9800; border-left: 5px solid #ff9800; padding-left: 15px; font-size: 1.8em;">Impact on Accounts (Debits & Credits)</h2>
+    <h2>Impact on Accounts (Debits & Credits)</h2>
     <p>
-        Every transaction affects at least two accounts. <strong style="color: #00bcd4;">Debits</strong> (Dr) and <strong style="color: #ff9800;">Credits</strong> (Cr) are used to record these changes.
+        Every transaction affects at least two accounts. **Debits** (Dr) and **Credits** (Cr) are used to record these changes.
     </p>
-    <table border="1" style="width: 100%; border-collapse: collapse; margin-top: 20px; border: 1px solid #ff9800;">
-        <caption style="font-weight: bold; margin-bottom: 10px; color: #ffc107; font-size: 1.1em;">Normal Balances and Increase/Decrease Rules</caption>
-        <thead style="background-color: #ff9800; color: #121212; text-transform: uppercase;">
+    <table border="1">
+        <caption>Normal Balances and Increase/Decrease Rules</caption>
+        <thead>
             <tr>
-                <th style="padding: 15px; border: 1px solid #ff9800;">Account Category</th>
-                <th style="padding: 15px; border: 1px solid #ff9800;">To Increase (<span style="color: #121212;">Normal Balance</span>)</th>
-                <th style="padding: 15px; border: 1px solid #ff9800;">To Decrease</th>
+                <th>Account Category</th>
+                <th>To Increase (Normal Balance)</th>
+                <th>To Decrease</th>
             </tr>
         </thead>
         <tbody>
-            <tr style="background-color: #212121;">
-                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Assets</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
+            <tr>
+                <td>Assets</td>
+                <td>Debit (Dr)</td>
+                <td>Credit (Cr)</td>
             </tr>
-            <tr style="background-color: #1e1e1e;">
-                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Liabilities</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
+            <tr>
+                <td>Liabilities</td>
+                <td>Credit (Cr)</td>
+                <td>Debit (Dr)</td>
             </tr>
-            <tr style="background-color: #212121;">
-                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Equity</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
+            <tr>
+                <td>Equity</td>
+                <td>Credit (Cr)</td>
+                <td>Debit (Dr)</td>
             </tr>
-            <tr style="background-color: #1e1e1e;">
-                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Revenue</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
+            <tr>
+                <td>Revenue</td>
+                <td>Credit (Cr)</td>
+                <td>Debit (Dr)</td>
             </tr>
-            <tr style="background-color: #212121;">
-                <td style="padding: 12px; border: 1px solid #333; font-weight: bold; color: #ffc107;">Expenses</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #004d40; color: #fff;">Debit (Dr)</td>
-                <td style="padding: 12px; border: 1px solid #333; background-color: #5d4037; color: #fff;">Credit (Cr)</td>
+            <tr>
+                <td>Expenses</td>
+                <td>Debit (Dr)</td>
+                <td>Credit (Cr)</td>
             </tr>
         </tbody>
     </table>
 
-    <p style="margin-top: 30px;">
-        Understanding these rules is essential for preparing the <strong style="color: #ff9800;">Trial Balance</strong> and ultimately, the <strong style="color: #ff9800;">Financial Statements</strong>.
+    <p>
+        Understanding these rules is essential for preparing the **Trial Balance** and ultimately, the **Financial Statements**.
     </p>
 
-    <h3 style="color: #ffc107; border-bottom: 1px dashed #444; padding-bottom: 5px; margin-top: 30px;">Basic Financial Statements</h3>
-    <ol style="padding-left: 40px; color: #bdbdbd;">
-        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Income Statement</strong> (shows Revenue and Expenses)</li>
-        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Statement of Retained Earnings</strong> (shows changes in Equity)</li>
-        <li style="margin-bottom: 8px;"><strong style="color: #ff9800;">Balance Sheet</strong> (shows Assets, Liabilities, and Equity)</li>
-        <li><strong style="color: #ff9800;">Statement of Cash Flows</strong> (shows cash movements)</li>
+    <h3>Basic Financial Statements</h3>
+    <ol>
+        <li>Income Statement (shows Revenue and Expenses)</li>
+        <li>Statement of Retained Earnings (shows changes in Equity)</li>
+        <li>Balance Sheet (shows Assets, Liabilities, and Equity)</li>
+        <li>Statement of Cash Flows (shows cash movements)</li>
     </ol>
 
-    <p style="text-align: center; margin-top: 50px; font-size: 0.9em; color: #555; border-top: 1px solid #444; padding-top: 15px;">
-        <em style="font-style: italic;">*This is a simplified representation for instructional purposes only. Design by Gemini.*</em>
+    <p>
+        *This is a simplified representation for instructional purposes only.*
     </p>
 
 </body>
