--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic Accounting Overview</title>
+    <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 
@@ -36,7 +37,7 @@
     <p>
         Every transaction affects at least two accounts. **Debits** (Dr) and **Credits** (Cr) are used to record these changes.
     </p>
-    <table border="1">
+    <table border="1" class="banana">
         <caption>Normal Balances and Increase/Decrease Rules</caption>
         <thead>
             <tr>
